# switchctl

./: CLAUDE.md  DESIGN.md  TASKS.md  Taskfile.yml  cli.py  pyproject.toml  requirements.txt  switch.example.yaml
app/: config_loader.py  models.py
app/core/: commands.py  diff.py
app/drivers/: __init__.py  aruba_os.py  base.py  mock.py
app/web/: main.py
app/web/routes/: api.py  dashboard.py  ports.py  vlans.py
app/web/templates/: base.html  dashboard.html  diff.html  port_detail.html  ports.html  vlans.html
config/: switch.yaml
templates/textfsm/: aruba_os_show_interface_status.textfsm  aruba_os_show_poe_interface_all.textfsm  aruba_os_show_poe_interface_brief.textfsm  aruba_os_show_version.textfsm  aruba_os_show_vlan.textfsm
