[project]
name = "switchctl"
version = "0.1.0"
description = "Declarative configuration management for Aruba S2500 switches"
authors = [
    {name = "mershab"}
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.134.0,<0.135.0)",
    "uvicorn[standard] (>=0.41.0,<0.42.0)",
    "netmiko (>=4.6.0,<5.0.0)",
    "paramiko (>=4.0.0,<5.0.0)",
    "ntc-templates (>=9.0.0,<10.0.0)",
    "textfsm (>=2.1.0,<3.0.0)",
    "ttp (>=0.10.0,<0.11.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "typer (>=0.24.1,<0.25.0)",
    "rich (>=14.3.3,<15.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
